# SLR_INCIA

./: README.md  graph.json  pyproject.toml
MyProj/: BioMecaModel.py  Build&RunModel.py  BuildModel.py  ClassTab.py  Hillmodel.py  MileusnicSpindle.py  Model.py  Neurons.py  Preprocess.py  SimpleModel.py  Synapses.py  TestMileusnic.py  TestMuscle.py  V1.py  test.py  test2.py  test3.py  test6.py  todelete.py
MyProj/Model/: CreateModel.py  __init__.py
MyProj/Unit_test/: SimpleModel.py  muscle.py  neuron.py  synapse.py
MyProj/Unit_test_FPGA/: muscle.py  muscle_unit_test.py  neuron.py  neuron_unit_test.py  spindle.py  spindle_unit_test.py  synapse_unit_test.py  test.py
MyProj/slr_components/: setup.py
MyProj/slr_components/components/: BioMecaModel.py  Hillmodel.py  MileusnicSpindle.py  Neurons.py  Synapses.py  __init__.py
MyProj/slr_components/components.egg-info/: PKG-INFO  SOURCES.txt
MyProj/slr_components_FPGA/: setup.py
MyProj/slr_components_FPGA/components_FPGA/: BioMecaModel.py  Hillmodel.py  MileusnicSpindle.py  ModelEquations.py  Neurons.py  SFixed.py  Synapses.py  __init__.py  operation_vhdl.py  test.py
MyProj/slr_components_FPGA/components_new.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
MyProj/slr_components_FPGA/componentsfpga/: Hillmodel.py  MileusnicSpindle.py  Neurons.py  Synapses.py  VHDL_types.py  __init__.py  operation_vhdl.py  type_conversion.py
MyProj/slr_components_FPGA/componentsfpga.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
csv/: jointangle.csv
json/: MouvementOkV0.json  OKV1.json  V0.json  V1.json  V2.json  mouvementOK.json  test0.json
src/: bardisbanian_visualizer.py  test_cytoscape.py  visualize.html
