[project]
name = "neuronnetworkproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13, <3.14.1"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "components @ file:///C:/Users/llemarcha002/PythonProjects/Spinal_Like_Regulator_Project/SLR_INCIA/MyProj/slr_components",
    "componentsfpga @ file:///C:/Users/llemarcha002/PythonProjects/Spinal_Like_Regulator_Project/SLR_INCIA/MyProj/slr_components_FPGA",
    "networkx (>=3.6.1,<4.0.0)",
]

[tool.poetry]

packages = [
    {include = "neuronnetworkproject", from = "src"},
    {include = "bardisbanian_visualizer.py", from = "src"}
]


[tool.poetry.dependencies]
components = {develop = true}
componentsfpga = {develop = true}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
